--- a/build.gradle
+++ b/build.gradle
@@ -123,8 +123,7 @@ dependencies {
     compile 'commons-logging:commons-logging:1.2'
     compile 'org.apache.commons:commons-lang3:3.5'
 
-    //compile 'org.jsoup:jsoup:1.10.2' contains a bug
-    //Until PR https://github.com/jhy/jsoup/pull/881 is merged we use a manual build under lib
+    compile 'org.jsoup:jsoup:1.10.3'
 
     compile 'com.mashape.unirest:unirest-java:1.4.9'
     compile 'info.debatty:java-string-similarity:0.24'
